FILE(GLOB_RECURSE MEDIA_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*)

#Copy all file/tree in the exe directory
#file(COPY ${CMAKE_CURRENT_SOURCE_DIR}
#    DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_custom_target(media SOURCES ${MEDIA_FILES})


install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
